--- a/index.html
+++ b/index.html
@@ -5,71 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <title>Webstudio</title>
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+    <header class="header">
+      <nav class="nav">
+        <a class="link logo h-logo" href="./index.html"
+          ><span class="logo-web">Web</span>Studio</a
+        >
+        <ul class="list">
           <li>
-            <a href="">Студия</a>
+            <a class="link nav-link" href="">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a class="link nav-link" href="./portfolio.html">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a class="link nav-link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="header-contacts">
+        <a class="link h-contacts" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="link h-contacts" href="tel:+380961111111"
+          >+38 096 111 11 11</a
+        >
       </div>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="button" type="button">Заказать услугу</button>
       </section>
-      <section>
+      <section class="features">
         <!--Заголовок будет скрыт в CSS-->
         <h2>Особенности</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="features-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="title">Пунктуальность</h3>
+            <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="title">Планирование</h3>
+            <p class="features-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="title">Современные технологии</h3>
+            <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="work-areas">
+        <h2 class="title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/box1.jpg"
@@ -96,9 +107,9 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/igor.jpg"
@@ -106,8 +117,8 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>
+            <h3 class="name">Игорь Демьяненко</h3>
+            <p class="team-position">
               Product Designer
             </p>
           </li>
@@ -118,8 +129,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p>
+            <h3 class="name">Ольга Репина</h3>
+            <p class="team-position">
               Frontend Developer
             </p>
           </li>
@@ -130,8 +141,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>
+            <h3 class="name">Николай Тарасов</h3>
+            <p class="team-position">
               Marketing
             </p>
           </li>
@@ -142,20 +153,26 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>
+            <h3 class="name">Михаил Ермаков</h3>
+            <p class="team-position">
               UI Designer
             </p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">WebStudio</a>
-      <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+    <footer class="footer">
+      <a class="link logo f-logo" href="./index.html"
+        ><span class="logo-web">Web</span>Studio</a
+      >
+      <address class="address">
+        <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+        <a class="link f-contacts" href="mailto:info@example.com"
+          >info@example.com</a
+        >
+        <a class="link f-contacts" href="tel:+380991111111"
+          >+38 099 111 11 11</a
+        >
       </address>
     </footer>
   </body>
