--- a/portfolio.html
+++ b/portfolio.html
@@ -5,32 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+    <header class="header">
+      <nav class="nav">
+        <a class="link logo h-logo" href="./index.html"
+          ><span class="logo-web">Web</span>Studio</a
+        >
+        <ul class="list">
           <li>
-            <a href="">Студия</a>
+            <a class="link nav-link" href="">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a class="link nav-link current" href="./portfolio.html"
+              >Портфолио</a
+            >
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a class="link nav-link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="header-contacts">
+        <a class="link h-contacts" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="link h-contacts" href="tel:+380961111111"
+          >+38 096 111 11 11</a
+        >
       </div>
     </header>
     <main>
       <!-- Заголовок h1 скрыть в css -->
       <h1>Портфолио</h1>
+      <!-- Далее исправить на радио-кнопки -->
       <ul>
         <li><button type="button">Все</button></li>
         <li><button type="button">Веб-сайты</button></li>
@@ -149,12 +163,18 @@
         </li>
       </ul>
     </main>
-    <footer>
-      <a href="">WebStudio</a>
-      <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+    <footer class="footer">
+      <a class="link logo f-logo" href="./index.html"
+        ><span class="logo-web">Web</span>Studio</a
+      >
+      <address class="address">
+        <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+        <a class="link f-contacts" href="mailto:info@example.com"
+          >info@example.com</a
+        >
+        <a class="link f-contacts" href="tel:+380991111111"
+          >+38 099 111 11 11</a
+        >
       </address>
     </footer>
   </body>
