adds css (cjlor and text) to prtfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/secondary.css" />
   </head>
   <body>
     <header class="header">
@@ -20,7 +20,7 @@
         >
         <ul class="list">
           <li>
-            <a class="link nav-link" href="">Студия</a>
+            <a class="link nav-link" href="./index.html">Студия</a>
           </li>
           <li>
             <a class="link nav-link current" href="./portfolio.html"
@@ -45,120 +45,126 @@
       <!-- Заголовок h1 скрыть в css -->
       <h1>Портфолио</h1>
       <!-- Далее исправить на радио-кнопки -->
-      <ul>
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайты</button></li>
-        <li><button type="button">Приложения</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-      </ul>
-      <ul>
+      <ul class="list">
+        <li><button class="selection-button" type="button">Все</button></li>
         <li>
-          <a href="">
+          <button class="selection-button" type="button">Веб-сайты</button>
+        </li>
+        <li>
+          <button class="selection-button" type="button">Приложения</button>
+        </li>
+        <li><button class="selection-button" type="button">Дизайн</button></li>
+        <li>
+          <button class="selection-button" type="button">Маркетинг</button>
+        </li>
+      </ul>
+      <ul class="list">
+        <li>
+          <a class="link" href="">
             <img
               src="./images/technocryk.jpg"
               alt="На ноутбуке открыт веб-сайт"
               width="370"
               height="294"
             />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p></a
+            <h2 class="project-name">Технокряк</h2>
+            <p class="type-of-work">Веб-сайт</p></a
           >
         </li>
         <li>
-          <a href="">
+          <a class="link" href="">
             <img
               src="./images/NewOrlean-vs-GoldenStar.jpg"
               alt="Два баскетболиста в схватке за мяч"
               width="370"
               height="294"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p></a
+            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+            <p class="type-of-work">Дизайн</p></a
           >
         </li>
         <li>
-          <a href="">
+          <a class="link" href="">
             <img
               src="./images/seafood.jpg"
               alt="Логотип ресторана с рыбой на заднем фоне"
               width="370"
               height="294"
             />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p></a
+            <h2 class="project-name">Ресторан Seafood</h2>
+            <p class="type-of-work">Приложение</p></a
           >
         </li>
         <li>
-          <a href="">
+          <a class="link" href="">
             <img
               src="./images/prime.jpg"
               alt="Наушники"
               width="370"
               height="294"
             />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p></a
+            <h2 class="project-name">Проект Prime</h2>
+            <p class="type-of-work">Маркетинг</p></a
           >
         </li>
         <li>
-          <a href="">
+          <a class="link" href="">
             <img
               src="./images/boxes.jpg"
               alt="Две коробки"
               width="370"
               height="294"
             />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p></a
+            <h2 class="project-name">Проект Boxes</h2>
+            <p class="type-of-work">Приложение</p></a
           >
         </li>
         <li>
-          <a href="">
+          <a class="link" href="">
             <img
               src="./images/inspiration.jpg"
               alt="На экране проекта открыт проект и изображена карта мира"
               width="370"
               height="294"
             />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p></a
+            <h2 class="project-name">Inspiration has no Borders</h2>
+            <p class="type-of-work">Веб-сайт</p></a
           >
         </li>
         <li>
-          <a href="">
+          <a class="link" href="">
             <img
               src="./images/limited-edition.jpg"
               alt="Открытый журнал на столе"
               width="370"
               height="294"
             />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p></a
+            <h2 class="project-name">Издание Limited Edition</h2>
+            <p class="type-of-work">Дизайн</p></a
           >
         </li>
         <li>
-          <a href="">
+          <a class="link" href="">
             <img
               src="./images/lab.jpg"
               alt="Бирка с названием проекта"
               width="370"
               height="294"
             />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p></a
+            <h2 class="project-name">Проект LAB</h2>
+            <p class="type-of-work">Маркетинг</p></a
           >
         </li>
         <li>
-          <a href="">
+          <a class="link" href="">
             <img
               src="./images/growing-business.jpg"
               alt="На ноутбуке открыто приложение Growing business"
               width="370"
               height="294"
             />
-            <h2>Growing Business</h2>
-            <p>Приложение</p></a
+            <h2 class="project-name">Growing Business</h2>
+            <p class="type-of-work">Приложение</p></a
           >
         </li>
       </ul>
