--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <header class="header">
@@ -20,7 +20,7 @@
         >
         <ul class="list">
           <li>
-            <a class="link nav-link" href="">Студия</a>
+            <a class="link nav-link current" href="./index.html">Студия</a>
           </li>
           <li>
             <a class="link nav-link" href="./portfolio.html">Портфолио</a>
