--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a class="link logo h-logo" href="./index.html"
+        <a class="logo h-logo" href="./index.html"
           ><span class="logo-web">Web</span>Studio</a
         >
         <ul class="list">
@@ -162,7 +162,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="link logo f-logo" href="./index.html"
+      <a class="logo f-logo" href="./index.html"
         ><span class="logo-web">Web</span>Studio</a
       >
       <address class="address">
